tests/errors/wrong-args-self.au
class A{}

def (self: A) fn() {
    fn(1,2,3);
}